[package]
version = "0.9.1"
name = "rlviser"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_framepace = { version = "0.20", default-features = false }
bevy_egui = { version = "0.38.0", default-features = false, features = ["default_fonts", "render"] }
bevy_vector_shapes = "0.11"
byteorder = "1.4.3"
include-flate = "0.3.0"
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde_json = "1.0.96"
walkdir = "2.3.3"
thiserror = "2.0"
rust_search = "2.1.0"
crossbeam-channel = "0.5.12"
itertools = "0.14.0"
bincode = "2.0"
zip = "7.0.0"
image = { version = "0.25.1", features = ["tga"], default-features = false }
tracing = { version = "*", features = ["release_max_level_error"] }
itoa = "1.0.15"
ahash = "0.8.11"
planus = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }

[build-dependencies]
planus-translation = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }
planus-codegen = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }
planus-types = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }

[dependencies.bevy]
version = "0.17.0"
default-features = false
features = [
    "std",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_input_focus",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_image",
    "bevy_mesh",
    "bevy_camera",
    "bevy_light",
    "bevy_shader",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "tga",
    "x11",
    "wayland",
]

[features]
default = ["bevy/dynamic_linking"]
full_load = []
team_goal_barriers = []
threaded = ["bevy/multi_threaded"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.tiny]
inherits = "release"
opt-level = "s"

[lints.clippy]
all = "warn"
